# algency_rag

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
apps/: __init__.py
apps/chat/: routers.py
apps/documents/: chunk_utils.py  embeddings.py  parsers.py  routers.py  schemas.py  storage.py  utils.py
apps/llm/: embeddings.py  llm.py  services.py
src/: settings.py
src/chat/: __init__.py  routers.py  schemas.py
src/documents/: __init__.py  chunk_utils.py  dependencies.py  parsers.py  routers.py  schemas.py
src/llm/: dependencies.py  embeddings.py  services.py
tests/chat/: test_routers.py
tests/documents/: test_chunk_utils.py  test_parsers.py  test_routers.py
tests/llm/: test_embeddings.py  test_llm_client.py  test_services.py
